# chrusty

./: .gitignore  Cargo.toml  README.md
scripts/: build.sh  sprt.sh
src/: engine.rs  ext.rs  helpers.rs  heuristic.rs  main.rs  movepick.rs  param.rs  pesto.rs  rep.rs  see.rs  timer.rs  tt.rs  uci.rs
