[package]
name = "chrusty"
version = "0.1.0"
edition = "2024"

[dependencies]
arrayvec = "0.7.7"
rustyline = "18.0.1"

[target.'cfg(target_arch = "x86_64")'.dependencies]
cozy-chess = { version = "0.3.4", features = ["pext"] }

[target.'cfg(target_arch = "aarch64")'.dependencies]
cozy-chess = { version = "0.3.4" }

[profile.release]
lto = "thin"
